[package]
name = "sock-tracker-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.79"
# Web
axum = "0.7.4"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
# Json
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.7.0"
# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.81"
httpc-test = "0.1.9"
